bonus/confs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wil-playground-service
  namespace: dev
  labels:
    app: will-playground
spec:
  selector:
    app: wil-playground
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
  type: LoadBalancer
